--- a/css/a86f112c7643460b98ed1c2564930cb3.css
+++ b/css/a86f112c7643460b98ed1c2564930cb3.css
@@ -10,3 +10,11 @@
   font-weight: 700;
   src: local('Lato Bold'), local('Lato-Bold'), url(../fonts/Lato-Boldttf) format('truetype');
 }
+@font-face {
+  font-family: 'Great Vibes';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Great Vibes'), local('GreatVibes-Regular'), url(../fonts/great-vibes.ttf) format('truetype');
+}
+
+
