--- a/css/a86f112c7643460b98ed1c2564930cb3.css
+++ b/css/a86f112c7643460b98ed1c2564930cb3.css
@@ -14,7 +14,7 @@
   font-family: 'Great Vibes';
   font-style: normal;
   font-weight: 400;
-  src: local('Great Vibes'), local('GreatVibes-Regular'), url(../fonts/great-vibes.ttf) format('truetype');
+  src: url(../fonts/great-vibes.ttf) format('truetype');
 }
 
 
